# Samwise

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
extension/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json
extension/scripts/: bundle-backend.mjs
extension/src/: backend-client.ts  backend-manager.ts  chat-handler.ts  credentials.ts  event-monitor.ts  extension.ts  mock-data.ts  sidebar-provider.ts
src/samwise/: __init__.py  auth.py  config.py  dispatch.py  models.py  pipeline.py  server.py  triage.py
src/samwise/handlers/: act.py  defer.py  notify.py
src/samwise/handlers/actions/: __init__.py  base.py  fix_lint.py  merge_pr.py  registry.py
src/samwise/sensors/: base.py  calendar.py  github.py  jira.py  project.py  workspace.py
tests/: test_actions.py  test_project_sensor.py  test_triage.py  test_workspace_sensor.py
